--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,8 @@
 
 $primary-color: #333;
 $secondary-color: #b5460f;
+$accent-color: #f5f5f5;
+$brand-color: #b5460f;
 $background-color: #fff5e6;
 $ingridients-color: #afadb5;
 $border-radius: 8px;
