--- a/src/components/Text/Text.module.scss
+++ b/src/components/Text/Text.module.scss
@@ -1,4 +1,4 @@
-@import '@styles/variables.scss';
+@use "@styles/variables" as *;
 
 .text {
   margin: 0;
@@ -41,13 +41,12 @@
     line-height: 18px;
   }
 
-  // Weight styles
   &--normal {
     font-weight: normal;
   }
 
   &--medium {
-    font-weight: 500;
+    font-weight: 600;
   }
 
   &--bold {
@@ -59,17 +58,26 @@
   }
 
   &--secondary {
-    color: $secondary-color;
+    color: $text-secondary-color;
   }
 
   &--accent {
-    color: $accent-color;
+    color: $text-accent-color;
   }
 
-  &--maxLines {
+  &--button-text {
+    color: $text-button-color;
+  }
+
+  &--max-lines {
     display: -webkit-box;
     -webkit-line-clamp: var(--max-lines);
     -webkit-box-orient: vertical;
     overflow: hidden;
+    text-overflow: ellipsis;
   }
-} 
+}
+
+a {
+  color: $text-primary-color;
+}
