--- a/src/App/pages/RecipeDetailPage/components/HeaderDetail/HeaderDetail.module.scss
+++ b/src/App/pages/RecipeDetailPage/components/HeaderDetail/HeaderDetail.module.scss
@@ -1,24 +1,14 @@
-@import '@styles/variables.scss';
+@use "@styles/variables" as *;
 
-.header {
+.header-detail {
   display: flex;
   align-items: center;
   gap: 8px;
 }
 
-.backButton {
+.header-detail__back-button {
   display: flex;
   align-items: center;
   justify-content: center;
   text-decoration: none;
-}
-
-.title {
-  font-weight: 700;
-  font-size: 44px;
-  line-height: 48px;
-  letter-spacing: 0;
-  margin: 0;
-  text-decoration: none;
-  color: $text-primary-color;
 }
