--- a/src/App/pages/RecipeDetailPage/components/NeededProducts/NeededProducts.module.scss
+++ b/src/App/pages/RecipeDetailPage/components/NeededProducts/NeededProducts.module.scss
@@ -1,18 +1,17 @@
-@import '@styles/variables.scss';
+@use "@styles/variables" as *;
 
-.neededProducts {
+.needed-products {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   gap: 48px;
-  margin: 48px 0;
   align-items: start;
 }
 
-.divider {
+.needed-products__divider {
   margin: 15px 0;
   width: 2px;
   height: calc(100% - 5px);
-  background: $secondary-color;
+  background: $brand-color;
   position: relative;
 
   &::before {
@@ -23,82 +22,47 @@
     transform: translateX(-50%);
     width: 7px;
     height: 7px;
-    background: $secondary-color;
+    background: $brand-color;
     border-radius: 50%;
   }
 }
 
-h2 {
-  margin: 0;
-}
-
-.ingredients {
+.needed-products__ingredients {
   margin: 0;
 
-  &__title {
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 32px;
-    color: $text-primary-color;
+  &-title {
     margin-bottom: 24px;
   }
 
-  &__list {
+  &-list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 24px;
   }
 
-  &__item {
+  &-item {
     display: flex;
     align-items: center;
     gap: 12px;
-    border-radius: $border-radius;
-
-    &__amount {
-      font-weight: 600;
-      font-size: 16px;
-      line-height: 20px;
-      color: $secondary-color;
-    }
-
-    &__name {
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 20px;
-      color: $text-primary-color;
-    }
   }
 }
 
-.equipment {
+.needed-products__equipment {
   margin: 0;
 
-  &__title {
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 32px;
-    color: $text-primary-color;
-    margin-bottom: 24px;
+  &-title {
+    margin-bottom: 20px;
   }
 
-  &__list {
+  &-list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 24px;
+    gap: 16px 24px;
   }
 
-  &__item {
+  &-item {
     display: flex;
     align-items: center;
-    gap: 12px;
-    border-radius: $border-radius;
-
-    &__name {
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 20px;
-      color: $text-primary-color;
-    }
+    gap: 8px;
   }
 }
