--- a/src/App/pages/RecipeDetailPage/components/HeaderDetail/HeaderDetail.module.scss
+++ b/src/App/pages/RecipeDetailPage/components/HeaderDetail/HeaderDetail.module.scss
@@ -12,3 +12,7 @@
   justify-content: center;
   text-decoration: none;
 }
+
+.header-detail__back-button-icon {
+  transform: translate(3px, 3px);
+}
