--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -40,3 +40,26 @@ $card-bg-color: $bg-primary-color; //+
 
 // Summary
 $summary-bg: rgba(#b5460f54, 0.33);
+
+// Input
+
+$input-bg: rgba(255, 255, 255, 1);
+$input-text: rgba(0, 0, 0, 1);
+$input-placeholder: rgba(175, 173, 181, 1);
+$input-bg-focus: rgba(255, 255, 255, 1);
+$input-border: rgba(255, 255, 255, 1);
+$input-text-focus: rgba(0, 0, 0, 1);
+$input-bg-disabled: rgba(255, 255, 255, 1);
+$input-text-disabled: rgba(0, 0, 0, 0.2);
+$input-placeholder-disabled: rgba(175, 173, 181, 0.5);
+$space-m: 16px;
+$space-s: 14px;
+$space-xs: 12px;
+$space-xxs: 8px;
+$text-secondary: rgba(175, 173, 181, 1);
+
+// Dropdown
+
+$dropdown-text: $text-primary-color;
+$dropdown-text-hover: $text-secondary-color;
+$dropdown-text-active: $text-accent-color;
