--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,7 @@ $secondary-color: #afadb5; //+
 $bg-primary-color: #fff; //+
 $accent-color: #f5f5f5; //+
 
+$gap-m: 36px;
 $gap-xxs: 8px; //+
 $border-radius: 8px; //+
 
