create VegetarianIcon (+ green color for icons)

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@ $brand-active-color: #872d01; //+
 $secondary-color: #afadb5; //+
 $bg-primary-color: #fff; //+
 $accent-color: #f5f5f5; //+
+$green-color: #008000; //+
 
 $gap-m: 36px;
 $gap-xxs: 8px; //+
