--- a/src/App/pages/RecipeListPage/components/RecipeListContent/FilterBar/FilterBar.module.scss
+++ b/src/App/pages/RecipeListPage/components/RecipeListContent/FilterBar/FilterBar.module.scss
@@ -1,4 +1,6 @@
-.filterBar {
+@use '@styles/variables' as *;
+
+.filter-bar {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -7,7 +9,6 @@
 
   &__categories {
     width: 324px;
-    margin-left: auto;
 
     :global(.dropdown) {
       width: 100%;
@@ -16,5 +17,29 @@
     :global(.input) {
       width: 100%;
     }
+  }
+
+  &__params {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 16px;
+    align-items: center;
+  }
+
+  &__vegetarian {
+    display: flex;
+    align-items: center;
+  }
+
+  &__vegetarian-label {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
+  }
+
+  &__random {
+    margin-left: 16px;
   }
 }
