--- a/src/App/pages/RecipeDetailPage/components/NeededProducts/NeededProducts.module.scss
+++ b/src/App/pages/RecipeDetailPage/components/NeededProducts/NeededProducts.module.scss
@@ -66,3 +66,25 @@
     gap: 8px;
   }
 }
+
+.servings-control {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.servings-input {
+  width: 100px;
+
+  :global {
+    input[type='number'] {
+      -moz-appearance: textfield;
+
+      &::-webkit-outer-spin-button,
+      &::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+    }
+  }
+}
