--- a/src/components/Switcher/Switcher.module.scss
+++ b/src/components/Switcher/Switcher.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 
   &__switch {
     display: flex;
@@ -12,8 +13,10 @@
     border-radius: $border-radius;
     padding: 4px;
     position: relative;
-    width: 240px;
-    height: 45px;
+    width: 100%;
+    aspect-ratio: 240/45;
+    min-height: 20px;
+    max-height: 52px;
     overflow: hidden;
     transition:
       transform 0.2s ease,
