--- a/src/App/pages/RecipeListPage/components/Poster/Poster.module.scss
+++ b/src/App/pages/RecipeListPage/components/Poster/Poster.module.scss
@@ -8,11 +8,33 @@
     width: 100%;
     height: 572px;
     object-fit: cover;
+
+    @media (max-width: 1024px) {
+      height: 450px;
+    }
+
+    @media (max-width: 768px) {
+      height: 350px;
+    }
+
+    @media (max-width: 480px) {
+      height: 250px;
+    }
   }
 
   &__overlay {
     text-align: center;
     margin: 36px auto 0;
+
+    @media (max-width: 768px) {
+      margin: 24px auto 0;
+      padding: 0 24px;
+    }
+
+    @media (max-width: 480px) {
+      margin: 16px auto 0;
+      padding: 0 16px;
+    }
 
     a {
       cursor: pointer;
