--- a/src/App/pages/RecipeListPage/components/RecipeListContent/RecipeListContent.module.scss
+++ b/src/App/pages/RecipeListPage/components/RecipeListContent/RecipeListContent.module.scss
@@ -2,12 +2,19 @@
 
 .recipe-list-content {
   width: 100%;
-  max-width: 1240px;
+  max-width: 1260px;
   margin: 0 auto;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   min-height: 80vh;
+  align-items: center;
+  padding: 0 10px;
+
+  @media (max-width: 1024px) {
+    max-width: calc(100% - 20px);
+    padding: 0 10px;
+  }
 
   &__loading,
   &__error,
@@ -24,5 +31,15 @@
     color: $text-secondary-color;
     text-align: center;
     padding: 20px;
+
+    @media (max-width: 768px) {
+      font-size: 16px;
+      padding: 16px;
+    }
+
+    @media (max-width: 480px) {
+      font-size: 14px;
+      padding: 12px;
+    }
   }
 }
