--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,50 +1,48 @@
 // Цвета
-$brand-color: #b5460f; //+
-$brand-active-color: #872d01; //+
-$secondary-color: #afadb5; //+
-$bg-primary-color: #fff; //+
-$accent-color: #f5f5f5; //+
-$green-color: #008000; //+
+$brand-color: #b5460f;
+$brand-active-color: #872d01;
+$secondary-color: #afadb5;
+$bg-primary-color: #fff;
+$accent-color: #f5f5f5;
+$green-color: #008000;
 
 $gap-m: 36px;
-$gap-xxs: 8px; //+
-$border-radius: 8px; //+
+$gap-xxs: 8px;
+$border-radius: 8px;
 
 // Button
-$button-height: 52px; //+
-$button-padding-vertical: 14px; //+
-$button-padding-horizontal: 20px; //+
-$button-gap: $gap-xxs; //+
+$button-height: 52px;
+$button-padding-vertical: 14px;
+$button-padding-horizontal: 20px;
+$button-gap: $gap-xxs;
 
 // Button
-$button-bg-primary: $brand-color; //+
-$button-bg-hover: rgba($brand-color, 0.7); //+
-$button-bg-active: $brand-active-color; //+
-$button-bg-disabled: #d9d9d9; //+
+$button-bg-primary: $brand-color;
+$button-bg-hover: rgba($brand-color, 0.7);
+$button-bg-active: $brand-active-color;
+$button-bg-disabled: #d9d9d9;
 
 // Text
-$text-primary-color: #000000; //+
-$text-secondary-color: #afadb5; //+
-$text-accent-color: $brand-color; //+
-$text-button-color: #ffffff; //+
+$text-primary-color: #000000;
+$text-secondary-color: #afadb5;
+$text-accent-color: $brand-color;
+$text-button-color: #ffffff;
 
 // Loader
-$loader-size-s: 24px; //+
-$loader-size-m: 48px; //+
-$loader-size-l: 60px; //+
-
-// Header +
+$loader-size-s: 24px;
+$loader-size-m: 48px;
+$loader-size-l: 60px;
 
 // Card
-$card-height: 600px; //+
-$card-width: 360px; //+
-$card-bg-color: $bg-primary-color; //+
+$card-height: 600px;
+$card-width: 360px;
+$card-bg-color: $bg-primary-color;
+$aspect-ratio-card: calc($card-width/$card-height);
 
 // Summary
 $summary-bg: rgba(#b5460f54, 0.33);
 
 // Input
-
 $input-bg: rgba(255, 255, 255, 1);
 $input-text: rgba(0, 0, 0, 1);
 $input-placeholder: rgba(175, 173, 181, 1);
@@ -61,7 +59,6 @@ $space-xxs: 8px;
 $text-secondary: rgba(175, 173, 181, 1);
 
 // Dropdown
-
 $dropdown-text: $text-primary-color;
 $dropdown-text-hover: $text-secondary-color;
 $dropdown-text-active: $text-accent-color;
@@ -72,3 +69,8 @@ $checkbox-border: rgba(255, 255, 255, 1);
 $checkbox-bg-hover: rgba(255, 255, 255, 1);
 $checkbox-bg-disabled: rgba(255, 255, 255, 0.5);
 $checkbox-border-disabled: rgba(255, 255, 255, 0);
+
+// Toast
+$success-color: #008000;
+$error-color: #ff0000;
+$info-color: $brand-color;
