--- a/src/App/pages/AuthPage/AuthPage.module.scss
+++ b/src/App/pages/AuthPage/AuthPage.module.scss
@@ -1,4 +1,5 @@
 @use '@styles/variables' as *;
+@use '@styles/mixins' as *;
 
 .auth {
   display: flex;
@@ -21,8 +22,7 @@
   }
 
   &__button-icon {
-    width: 24px;
-    height: 24px;
+    @include square(24px);
     flex-shrink: 0;
   }
 
