--- a/src/App/pages/RecipeDetailPage/components/Directions/Directions.module.scss
+++ b/src/App/pages/RecipeDetailPage/components/Directions/Directions.module.scss
@@ -1,14 +1,15 @@
 @use '@styles/variables' as *;
+@use '@styles/mixins' as *;
 
 .directions {
   &__title {
     margin-bottom: 24px;
 
-    @media (max-width: 768px) {
+    @include lessThanTablet {
       margin-bottom: 16px;
     }
 
-    @media (max-width: 480px) {
+    @include lessThanPhone {
       margin-bottom: 12px;
     }
   }
@@ -18,11 +19,11 @@
     flex-direction: column;
     gap: 16px;
 
-    @media (max-width: 768px) {
+    @include lessThanTablet {
       gap: 12px;
     }
 
-    @media (max-width: 480px) {
+    @include lessThanPhone {
       gap: 8px;
     }
   }
@@ -32,7 +33,7 @@
     flex-direction: column;
     gap: 4px;
 
-    @media (max-width: 480px) {
+    @include lessThanPhone {
       gap: 2px;
     }
   }
