--- a/src/App/pages/RecipeDetailPage/components/FoodInfo/FoodInfo.module.scss
+++ b/src/App/pages/RecipeDetailPage/components/FoodInfo/FoodInfo.module.scss
@@ -1,4 +1,5 @@
 @use '@styles/variables' as *;
+@use '@styles/mixins' as *;
 
 .food-info {
   display: flex;
@@ -7,12 +8,12 @@
   gap: 166px;
   height: 298px;
 
-  @media (max-width: 1024px) {
+  @include lessThanDesktop {
     gap: 80px;
     height: 250px;
   }
 
-  @media (max-width: 768px) {
+  @include lessThanTablet {
     flex-direction: column;
     gap: 32px;
     height: auto;
@@ -24,17 +25,17 @@
     border-radius: $border-radius;
     object-fit: cover;
 
-    @media (max-width: 1024px) {
+    @include lessThanDesktop {
       max-width: 350px;
       height: 250px;
     }
 
-    @media (max-width: 768px) {
+    @include lessThanTablet {
       max-width: 100%;
       height: 200px;
     }
 
-    @media (max-width: 480px) {
+    @include lessThanPhone {
       height: 180px;
     }
   }
@@ -47,17 +48,17 @@
   gap: 50px 100px;
   align-items: start;
 
-  @media (max-width: 1024px) {
+  @include lessThanDesktop {
     gap: 40px 60px;
   }
 
-  @media (max-width: 768px) {
+  @include lessThanTablet {
     grid-template-columns: repeat(2, 1fr);
     gap: 32px;
     width: 100%;
   }
 
-  @media (max-width: 480px) {
+  @include lessThanPhone {
     grid-template-columns: 1fr;
     gap: 24px;
   }
@@ -70,7 +71,7 @@
   align-items: center;
   text-align: center;
 
-  @media (max-width: 480px) {
+  @include lessThanPhone {
     gap: 4px;
   }
 
