--- a/src/App/pages/RecipeDetailPage/components/HeaderDetail/HeaderDetail.module.scss
+++ b/src/App/pages/RecipeDetailPage/components/HeaderDetail/HeaderDetail.module.scss
@@ -1,15 +1,16 @@
 @use '@styles/variables' as *;
+@use '@styles/mixins' as *;
 
 .header-detail {
   display: flex;
   align-items: center;
   gap: 8px;
 
-  @media (max-width: 768px) {
+  @include lessThanTablet {
     gap: 6px;
   }
 
-  @media (max-width: 480px) {
+  @include lessThanPhone {
     gap: 4px;
   }
 }
@@ -22,11 +23,11 @@
   cursor: pointer;
   padding: 8px;
 
-  @media (max-width: 768px) {
+  @include lessThanTablet {
     padding: 6px;
   }
 
-  @media (max-width: 480px) {
+  @include lessThanPhone {
     padding: 4px;
   }
 }
@@ -34,14 +35,12 @@
 .header-detail__back-button-icon {
   transform: translate(3px, 3px);
 
-  @media (max-width: 768px) {
-    width: 28px;
-    height: 28px;
+  @include lessThanTablet {
+    @include square(28px);
   }
 
-  @media (max-width: 480px) {
-    width: 24px;
-    height: 24px;
+  @include lessThanPhone {
+    @include square(24px);
   }
 }
 
@@ -51,7 +50,7 @@
     line-height: 28px;
   }
 
-  @media (max-width: 480px) {
+  @include lessThanPhone {
     font-size: 20px;
     line-height: 24px;
   }
