--- a/src/App/pages/RecipeDetailPage/components/Summary/Summary.module.scss
+++ b/src/App/pages/RecipeDetailPage/components/Summary/Summary.module.scss
@@ -1,4 +1,5 @@
 @use '@styles/variables' as *;
+@use '@styles/mixins' as *;
 
 .summary {
   background: $summary-bg;
@@ -6,26 +7,13 @@
   border-radius: $border-radius;
   line-height: 20px;
 
-  @media (max-width: 768px) {
+  @include lessThanTablet {
     padding: 24px;
     line-height: 18px;
   }
 
-  @media (max-width: 480px) {
+  @include lessThanPhone {
     padding: 16px;
     line-height: 16px;
-  }
-
-  p {
-    margin: 0;
-    font-size: 16px;
-
-    @media (max-width: 768px) {
-      font-size: 14px;
-    }
-
-    @media (max-width: 480px) {
-      font-size: 12px;
-    }
   }
 }
