--- a/src/App/pages/RecipeListPage/components/RecipeListContent/RecipeListContent.module.scss
+++ b/src/App/pages/RecipeListPage/components/RecipeListContent/RecipeListContent.module.scss
@@ -1,4 +1,5 @@
 @use '@styles/variables' as *;
+@use '@styles/mixins' as *;
 
 .recipe-list-content {
   width: 100%;
@@ -11,7 +12,7 @@
   align-items: center;
   padding: 0 10px;
 
-  @media (max-width: 1024px) {
+  @include lessThanDesktop {
     max-width: calc(100% - 20px);
     padding: 0 10px;
   }
@@ -32,12 +33,12 @@
     text-align: center;
     padding: 20px;
 
-    @media (max-width: 768px) {
+    @include lessThanTablet {
       font-size: 16px;
       padding: 16px;
     }
 
-    @media (max-width: 480px) {
+    @include lessThanPhone {
       font-size: 14px;
       padding: 12px;
     }
