fix loading saved recipes

--- a/src/App/pages/FavoritesPage/FavoritesPage.module.scss
+++ b/src/App/pages/FavoritesPage/FavoritesPage.module.scss
@@ -44,3 +44,11 @@
     margin: 24px auto;
   }
 }
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px auto;
+  width: 100%;
+}
